syntax = "proto3";

//时间戳
message TimeStamp
{
	fixed32 time = 1;  //时间戳，从1970年1月1日0时0分0秒开始的秒数，如无特殊说明都采用此格式
}
//踢用户
message TickUser
{
    string  reason = 1; //踢人原因
	fixed32 time = 2;   //时间戳
}

//角色类型
enum RoleType
{
	USER = 0;               //普通用户
	MERCHANT = 1;           //商家
	OFFICIAL = 2;           //官方
	AI_ASSISTANT = 3;       //AI助手
}

//登录信息
message UserLogin
{
	string token = 1;      //登录token
	RoleType userType = 2; //用户类型，一般是普通用户和或者是商家
	fixed32 time = 3;
}

//好友请求信息
message FriendRquestInfo
{
    string friendID = 1;           //好友ID
	RoleType friendType = 2;       //好友类型
	string petitionerHead = 3;     //请求人头像
	string petitionerNickName = 4; //请求人昵称
	fixed32 time = 5;              //当前时间戳
}
//好友请求处理信息
message FriendRquestHandle
{
     string friendID = 1;      //申请人ID
	 enum HandleResult
	 {
		ACCEPT = 0;    //接受
		REJECT = 1;    //拒绝
	 }
	 HandleResult result = 2;   //处理结果
	 string handlerHead = 3;    //处理者头像
	 string handlerNickName = 4;//处理者昵称
	 fixed32 time = 5;          //时间戳
}

//删除好友
message FriendDelete
{
	string friendID = 1;  //待删除好友ID
	fixed32 time = 2;     //时间戳
}

//消息类型
enum MessageType
{
	TEXT = 0;      //文本
	IMAGE = 1;     //图片
	VOICE = 2;     //语音
	VIDEO = 3;     //视频
}

//发送消息给好友
message SendMsgToFriend
{
	string friendID = 1;     //接受消息好友ID
	MessageType msgType = 2; //消息类型
	string msg = 3;          //消息内容，如果是图片、语音、视频，此字段表示资源ID
	fixed32 time = 4;        //时间戳
}

//发送消息给官方
message SendMsgToOfficial
{
	MessageType msgType = 1; //消息类型
	string msg = 2;          //消息内容，如果是图片、语音、视频，此字段表示资源ID
	fixed32 time = 3;        //时间戳
}

//收到消息
message ReceiveMsgInfo
{
    RoleType friendType = 1; //好友类型
	string friendID = 2;     //发送消息好友ID
	MessageType msgType = 3; //消息类型
	string msg = 4;          //消息内容，如果是图片、语音、视频，此字段表示资源ID
	fixed32 time = 5;        //时间戳
}

//消息读状态
message MsgReadStatus
{
	string friendID = 1;     //发送消息好友ID
	enum ReadStatus
	{
		READ = 0;      //已读
		UNREAD = 1;    //未读
	}
	ReadStatus status = 2;   //消息状态
	fixed32 time = 3;        //时间戳
}

//所有消息读状态
message MsgsReadStatus
{
	MsgReadStatus.ReadStatus status = 1; //消息状态
	fixed32 time = 2;        //时间戳
}

//删除会话
message ChatDelete
{
    string friendID = 1;     //会话好友ID
	fixed32 time = 2;        //时间戳
}

//会话置顶
message ChatSetTop
{
	string friendID = 1;     //会话好友ID
	enum TopStatus
	{
		SETTOP = 0;      //置顶
		CANCEL = 1;      //取消
	}
	TopStatus status = 2;   //消息状态
	fixed32 time = 3;        //时间戳
}

//服务端通知
message ServiceNotice
{
	uint32 mainModule = 1;    //主模块    主模块和子模块事先约定好
	uint32 subModule = 2;     //子模块
	string msg = 3;           //消息内容
	fixed32 time = 4;         //时间戳    	
}

//服务端结果通知
message ResponseResult
{
   enum ResultStatus
   {
		SUCCESS = 0;   //成功
		FAIL = 1;      //失败
   }
   ResultStatus result = 1;        //结果
   string describe = 2;   //结果描述
}







